# gdlazer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  about.md  index_friendly_diffs.diff  linux_build.sh  m.py  mod.json  support.md  termux_build.sh  termux_install_mod.sh  tobitmap.py  ungamble.diff
.github/: instructions
.github/workflows/: multi-platform.yml
resources/: localisations.json  osuFont.fnt  osuFont.fntm
resources/fonts/FontAwesome5/: FontAwesome-Brands.fnt  FontAwesome-Regular.fnt  FontAwesome-Solid.fnt
resources/fonts/torus/: LICENSE  Torus-Bold.fnt  Torus-Light.fnt  Torus-Regular.fnt  Torus-SemiBold.fnt  tofnt.sh
resources/glyphs/: osuEditor-hd.fnt  osuEditor-uhd.fnt  osuFont-uhd.fnt  osuFont.fnt  osuIcon-uhd.fnt
resources/localisation/: Notifications.resx
resources/sfx/: menu  ui
resources/textures/icons/: render.sh
src/: CONCERNING_CODE_DO_NOT_COMPILE.cppp  amogus.cpp  amogus.hpp  elemtree.hpp  macro.h  main.cpp  matthew-resize.cpwefwefp  the.cpp  utils.cpp  utils.hpp
src/framework/: Game.cpp  Game.hpp  README.md
src/framework/audio/: AudioManager.cpp  AudioManager.hpp
src/framework/bindables/: Bindable.cpp  Bindable.hpp  Event.hpp  EventTarget.cpp  EventTarget.hpp
src/framework/graphics/: CCPointExtensions.hpp  Color4.cpp  Color4.hpp  Vector4.hpp
src/framework/graphics/color/: ColorInfo.hpp  SRGBColor.hpp
src/framework/graphics/containers/: CCClippingLayer.cpp  CCClippingLayer.hpp  ClickableContainer.cpp  ClickableContainer.hpp  Container.cpp  Container.hpp  ContainerLayout.hpp  Event.hpp  EventTarget.cpp  EventTarget.hpp  FillFlowContainer.cpp  FillFlowContainer.hpp  GridContainer.cpp  GridContainer.hpp  KeyEvent.hpp  Node.cpp  Node.hpp  OverlayContainer.cpp  OverlayContainer.hpp  ScrollableContainer.cpp  ScrollableContainer.hpp  VisibilityContainer.cpp  VisibilityContainer.hpp
src/framework/graphics/sprites/: BMGlyphManager.cpp  BMGlyphManager.hpp  CCResizableSprite.cpp  CCResizableSprite.hpp  FontAwesome.hpp  IconConstructor.cpp  IconConstructor.hpp
src/framework/input/events/: KeyEvent.hpp  MouseDragEvent.hpp  MouseEvent.hpp
src/framework/io/stores/: FontStores.hpp
src/framework/localisation/: LocalisationManager.cpp  LocalisationManager.hpp  LocalisedLabel.hpp
src/framework/screens/: Screen.cpp  Screen.hpp  ScreenTransitionEvent.hpp
src/framework/utils/: ActionsNotifier.cpp  ActionsNotifier.hpp  IInterpolable.hpp  Interpolable.hpp  Interpolation.cpp  Interpolation.hpp  Reactive.hpp  readonly.hpp
src/frameworks/: Game.cpp  Game.hpp  macro.h
src/frameworks/audio/: AudioManager.cpp  AudioManager.hpp
src/frameworks/bindables/: Bindable.hpp  Event.cpp  Event.hpp  EventTarget.cpp  EventTarget.hpp
src/frameworks/graphics/: CCEase2.hpp  Easings.cpp  Easings.hpp  Vector4.hpp
src/frameworks/graphics/animations/: ActionEase.hpp  ContainerActions.cpp  ContainerAnimations.cpp  ContainerAnimations.hpp  Easings.cpp  Easings.hpp
src/frameworks/graphics/color/: Color4.cpp  Color4.hpp  ColorInfo.hpp
src/frameworks/graphics/containers/: CCClippingNodeRGBA.cpp  CCClippingNodeRGBA.hpp  CircularContainer.hpp  ClickableContainer.cpp  ClickableContainer.hpp  Container.cpp  Container.hpp  ContainerActions.cpp  ContainerActions.hpp  FillDirection.hpp  FillFlowContainer.cpp  FillFlowContainer.hpp  FillFlowLayout.cpp  FillFlowLayout.hpp  GridContainer.cpp  GridContainer.hpp  GridLayout.cpp  GridLayout.hpp  OverlayContainer.cpp  OverlayContainer.hpp  ScrollContainer.cpp  ScrollContainer.hpp  ScrollableContainer.cpp  ScrollableContainer.hpp  VisibilityContainer.cpp  VisibilityContainer.hpp
src/frameworks/graphics/sprites/: BMGlyphManager.cpp  BMGlyphManager.hpp  CCResizableSprite.cpp  CCResizableSprite.hpp  FontAwesome.hpp  IconConstructor.cpp  IconConstructor.hpp
src/frameworks/graphics/ui/: SliderBar.cpp  SliderBar.hpp  TabControl.cpp  TabControl.hpp  TabItem.hpp
src/frameworks/input/: input.cpp
src/frameworks/input/events/: KeyEvent.hpp  (+2 more)
src/frameworks/screens/: Screen.hpp
src/frameworks/transforms/: DefaultEasingFunc.cpp  DefaultEasingFunc.hpp  EasingFunction.hpp
src/frameworks/utils/: GenericInterpolables.cpp  GenericInterpolables.hpp  Interpolable.hpp  Interpolation.hpp  Logger.hpp  h2dContainer.hpp  h2dFormatter.hpp  homog2d.hpp
src/game/: MouseEvent.hpp  OsuGame.cpp  OsuGame.hpp  README.md  check_commit.py  current_commit
src/game/beatmaps/: BeatmapOnlineStatus.hpp
src/game/graphics/: CCLayerGradient2.cpp  CCLayerGradient2.hpp  CCResizableSprite.cpp  CCResizableSprite.hpp  OsuColor.cpp  OsuColor.h  OsuColor.hpp  OsuIcon.cpp  OsuIcon.hpp
src/game/input/: Input.cpp  Input.hpp
src/game/localisations/: Language.cpp  Language.hpp
src/game/overlays/: ModsOverlay.cpp  ModsOverlay.hpp  MusicController.cpp  MusicController.hpp  NowPlayingOverlay.cpp  NowPlayingOverlay.hpp  OverlayColorProvider.cpp  OverlayColorProvider.hpp  SettingsPanel.cpp  SettingsPanel.hpp
src/game/scoring/: HitResult.hpp  RankingTier.hpp  ScoreRank.hpp
src/game/screens/: OsuScreen.hpp  Playground.cpp  Playground.hpp  PlaygroundScreen.cpp  PlaygroundScreen.hpp
src/game/utils/: LayerCapture.cpp  LayerCapture.hpp
src/helpers/: ColorHelper.hpp  CustomActions.cpp  CustomActions.hpp  MouseEvent.cpp  MouseEvent.hpp  colors.hpp
src/helpers/sound/: Manager.cpp  Manager.hpp  SoundManager.cpp  SoundManager.hpp
src/intro/: IntroTriangles.cpp  IntroTriangles.hpp
src/main/: PauseLayer.cpp  PauseLayer.hpp  PauseMenu.cpp  PauseMenu.hpp
src/tree/: Container.cpp  Container.hpp  Drawable.hpp  Element.cpp  Element.hpp
src/tree/col/: Color4.cpp  Color4.hpp
src/tree/types/: BoxConstraints.hpp  Vector2.hpp
src/ui/: Dialog.cpp  Dialog.hpp  DialogButton.cpp  DialogButton.hpp
src/ui/color/: OverlayColorProvider.cpp  OverlayColorProvider.hpp
src/ui/containers/: WaveContainer.cpp  WaveContainer.hpp
src/ui/deco/: Rectangle.cpp  Rectangle.hpp  Triangles.cpp  Triangles.hpp
src/ui/dialog/: DialogButton.hpp  PopupDialog.cpp
src/widgets/: Element.hpp  Key.hpp  RectangleF.hpp  Widget.hpp  shared_ptr_2.hpp
(+107 files in other folders)
